debezium/dbz#2314 Check SSRF on webhook channel
Signed-off-by: Fiore Mario Vitale <mvitale@redhat.com>